/*
 * $Id: ChangeLog,v 1.3545 2004/10/26 20:15:47 oh1 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-27 11:15 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * source/rtl/gtapi.c
    ! hb_gtSetPos(): ignore ct_WCur if it is NULL

2004-10-26 22:00 UTC+0200 Henryk Olkowski <oh1@op.pl>
  * source/rtl/gtapi.c
    ! tested with GTWVT

 * harbdll.bc
 * harbdll.vc
 * harbdll.wc
   ! changed ctwin.prg to ctwin.c

2004-10-25 21:55 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/vm/memvars.c
    ! Fixed memory leak trap in hb_memvarSetValue()

2004-10-25 18:55 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/browse.prg
  * source/rtl/tgetlist.prg
    * Corrected Inkey() to Inkey(0.1) when used in loops.

  /* I believe we must also revise LOOPS utilizing NextKey() == 0 like in browodbc.prg */

2004-10-25 18:30 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    * Corrected usage of hb_pp_ParseExpression()
  * source/rtl/pplib.c
    * Minor formatting.

2004-10-25 17:37 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/calconst.c
    + Added shortcut logic to && and || support in #if and #elif directives.
    + Added support for Identifiers in NextTokenInConstant()
      /* Undefined IDs evaluates to 0 instead of an expression error (like C compilers) */
    * Revised to use C macros isdigit() isxdigit() isalpha() and isalnum)

  * source/rtl/terror.prg
    + Added Error() to provide a default class function
    + Added INLINE New() to return Self (Class(y) compatability)

2004-10-25 15:15 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/gtapi.c
    ! Fixed startup for consoles with 0,0 max coords. (i.e. bcc32 -tW)

2004-10-25 10:28 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbapigt.h
    * Corrected usage of HB_EXPORT with complex types.
